--- a/app/angular.json
+++ b/app/angular.json
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "docs",
+            "outputPath": "../docs",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -38,6 +38,7 @@
           },
           "configurations": {
             "production": {
+              "baseHref": "/corujao",
               "budgets": [
                 {
                   "type": "initial",
