baseHref e deployUrl /corujao

--- a/app/angular.json
+++ b/app/angular.json
@@ -39,6 +39,7 @@
           "configurations": {
             "production": {
               "baseHref": "/corujao",
+              "deployUrl": "/corujao/",
               "budgets": [
                 {
                   "type": "initial",
